@@ -23,6 +23,7 @@ https://www.gnu.org/licenses/ or write to the Free Software Foundation, Inc.,
 Changes from versions 4.1.* to version 4.2.0:
 - The "" release.
 - New functions mpfr_cosu, mpfr_sinu and mpfr_tanu (experimental).
+- New functions mpfr_cospi, mpfr_sinpi and mpfr_tanpi (experimental).
 - Bug fixes.
   In particular, for the formatted output functions (mpfr_printf, etc.),
   the case where the precision consists only of a period has been fixed
